@@ -36,55 +36,46 @@ my @client_iorfile;
 my $ARGC = @ARGV;
 
 if ($ARGC > 0) {
-    if ($ARGC > 1)
-    {
+    if ($ARGC > 1) {
         print STDERR "ERROR: Too many command-line arguments for $0.\n";
         exit 1;
     }
 
     my $subtest = $ARGV[0];
 
-    if ($subtest eq 'remote')
-    {
+    if ($subtest eq 'remote') {
         $num_remote_clients = 40;
     }
-    elsif ($subtest eq 'collocated')
-    {
+    elsif ($subtest eq 'collocated') {
         $num_remote_clients = 0;
         $num_collocated_clients = 1;
     }
-    elsif ($subtest eq 'remote_orbthreads')
-    {
+    elsif ($subtest eq 'remote_orbthreads') {
         $num_orb_threads = 5;
         $num_remote_clients = 40;
     }
-    elsif ($subtest eq 'remote_servants')
-    {
+    elsif ($subtest eq 'remote_servants') {
         $num_servants = 5;
         $num_remote_clients = 40;
     }
-    elsif ($subtest eq 'remote_csdthreads')
-    {
+    elsif ($subtest eq 'remote_csdthreads') {
         $num_csd_threads = 5;
         $num_remote_clients = 40;
     }
-    elsif ($subtest eq 'remote_big')
-    {
+    elsif ($subtest eq 'remote_big') {
         $num_csd_threads = 5;
         $num_servants = 10;
         $num_orb_threads = 4;
         $num_remote_clients = 40;
     }
-    elsif ($subtest eq 'big')
-    {
+    elsif ($subtest eq 'big') {
         $num_csd_threads = 5;
         $num_servants = 10;
         $num_orb_threads = 4;
         $num_remote_clients = 40;
         $num_collocated_clients = 40;
     }
-    elsif ($subtest eq 'usage')
-    {
+    elsif ($subtest eq 'usage') {
         print STDOUT "Usage: $0 [<subtest>]\n" .
                     "\n" .
                     "Supported <subtest> values:\n" .
@@ -99,8 +90,7 @@ if ($ARGC > 0) {
                     "\n";
         exit 0;
     }
-    else
-    {
+    else {
         print STDERR "ERROR: invalid subtest argument for $0: $subtest\n";
         exit 1;
     }
@@ -155,13 +145,11 @@ for ($i = 0; $i < $num_remote_clients; $i++)
 {
     $client_status = $CLS[$i]->WaitKill($client->ProcessStopWaitInterval ());
 
-    if ($client_status != 0)
-    {
+    if ($client_status != 0) {
         print STDERR "ERROR: client $i returned $client_status\n";
         $status = 1;
     }
 }
-
 
 $server_status = $SV->WaitKill($server->ProcessStopWaitInterval ());
 
